archetect-templating/tests/snapshots/test_parser__parser@err_binop_missing_rhs.txt.snap
---
source: archetect_minijinja/tests/test_parser.rs
description: "{{ foo / }}"
input_file: archetect_minijinja/tests/parser-inputs/err_binop_missing_rhs.txt
---
Err(
    Error {
        kind: SyntaxError,
        detail: "unexpected end of variable block",
        name: "err_binop_missing_rhs.txt",
        line: 1,
    },
)
