archetect-templating/tests/snapshots/test_parser__parser@err_open_variable_block.txt.snap
---
source: archetect_templating/tests/test_parser.rs
description: "Hello {{ world"
input_file: archetect_templating/tests/parser-inputs/err_open_variable_block.txt
---
Err(
    Error {
        kind: SyntaxError,
        detail: "unexpected end of input, expected end of variable block",
        name: "err_open_variable_block.txt",
        line: 1,
    },
)
